# extrakt

./: .flake8  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
extrakt/: activity.py  base.py  map.py  metadata.py  template.html
tests/: test_map.py  test_metadata.py
tests/fixtures/: trace.gpx
